# python_prompt_framework

./: README.md  examples.py  pyproject.toml  requirements.txt
framework/: __init__.py  core.py  prompt_chain.py
templates/: chain_of_thought_1.yaml  chain_of_thought_2.yaml  few_shot_1.yaml  few_shot_2.yaml  role_based_1.yaml  role_based_2.yaml  structured_output_1.yaml  structured_output_2.yaml  zero_shot_1.yaml  zero_shot_2.yaml
